--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-Hello world!<br/>
-A new line we just added.
-edit
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1>GitHub Actions</h1>
+    <p>Example HTML webpage for the KIII course at FINKI.</p>
+    <p>The course cover the basic aspects of DevOps engineering.</p>
+  </body>
+</html>
