--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
     <h1>GitHub Actions</h1>
     <p>Example HTML webpage for the KIII course at FINKI.</p>
     <p>The course cover the basic aspects of DevOps engineering.</p>
-  </body>
+    <p>Edit</p>
 </html>
